Java memory settings.
Added Java memory settings to REAMDE.md.